--- a/cert/index.html
+++ b/cert/index.html
@@ -14,25 +14,54 @@
   <link rel="icon" type="image/png" href="/img/favicon.png"/>
   <link rel="canonical" href="https://88st.cloud/cert/"/>
 
-  <link rel="stylesheet" href="/assets/88st-cert.css?v=VIP4_20260213_14"/>
+  <link rel="stylesheet" href="/assets/88st-cert.css?v=VIP4_20260214_15"/>
 
   <!-- common shell + analytics -->
-  <script defer src="/assets/js/88st-shell.js?v=VIP4_20260213_14"></script>
-  <script defer src="/assets/js/88st-analytics.js?v=VIP4_20260213_14"></script>
+  <script defer src="/assets/js/88st-shell.js?v=VIP4_20260214_15"></script>
+  <script defer src="/assets/js/88st-analytics.js?v=VIP4_20260214_15"></script>
 </head>
 <body>
   <main class="cert-wrap">
     <section class="cert-hero">
-      <h1>인증사이트</h1>
-      <p>
-        카드 하나씩 눌러서 <span class="cert-em">가입코드</span>, <span class="cert-em">혜택</span>, <span class="cert-em">주의사항</span>을 빠르게 확인하세요.
-        <br/>
-        즐겨찾기/최근 기록으로 재방문이 쉬워지고, 검색/정렬로 필요한 카드만 골라볼 수 있어요.
-      </p>
-      <div class="cert-actions">
-        <a class="cert-btn primary" href="#certList">카드 목록 보기</a>
-        <a class="cert-btn" href="/">메인으로</a>
-        <a class="cert-btn" href="https://t.me/UZU59" target="_blank" rel="noopener">문의 (텔레그램)</a>
+      <div class="cert-hero-grid">
+        <div class="cert-hero-main">
+          <h1>인증사이트</h1>
+          <p>
+            보증·인증 카드를 한 곳에 모아 <span class="cert-em">가입코드</span>, <span class="cert-em">혜택</span>, <span class="cert-em">주의사항</span>을
+            빠르게 비교할 수 있도록 정리했습니다.
+            <br/>
+            검색/정렬로 필요한 카드만 골라보고, 즐겨찾기/최근 기록으로 재방문도 쉽게 관리하세요.
+          </p>
+
+          <div class="cert-actions">
+            <a class="cert-btn primary" href="#certList">카드 목록 보기 →</a>
+            <a class="cert-btn" href="/bonus-checklist/">입플 체크리스트</a>
+            <a class="cert-btn" href="https://t.me/UZU59" target="_blank" rel="noopener">문의 (텔레그램)</a>
+          </div>
+
+          <p class="cert-hero-note">
+            ※ 카드 내용은 참고용이며, 조건/혜택은 수시로 변경될 수 있습니다. 가입 전 공지/문의로 재확인하세요.
+          </p>
+        </div>
+
+        <div class="cert-hero-side" aria-label="빠른 안내">
+          <div class="cert-side-card">
+            <div class="k">3-STEP 사용법</div>
+            <ol>
+              <li>카드를 눌러 <b>가입코드/혜택/주의</b>를 확인</li>
+              <li>필요하면 <b>코드 복사</b> 후 바로 이동</li>
+              <li>가입 전 <b>롤링/출금/제한</b> 조건을 다시 체크</li>
+            </ol>
+          </div>
+          <div class="cert-side-card">
+            <div class="k">안전 체크 포인트</div>
+            <ul>
+              <li>최대 지급·환전 속도·출금 제한</li>
+              <li>보너스 롤링/게임 제외 조건</li>
+              <li>문의 채널/운영 공지 업데이트</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -119,7 +148,7 @@
     </div>
   </div>
 
-  <script defer src="/assets/js/88st-cert.js?v=VIP4_20260213_14"></script>
+  <script defer src="/assets/js/88st-cert.js?v=VIP4_20260214_15"></script>
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
