--- a/tool-margin/index.html
+++ b/tool-margin/index.html
@@ -401,21 +401,7 @@ sync(); calc();
 <div>© 88 — Tools</div>
 <div class="small">책임감 있게 이용해 주세요. 과몰입 방지/리스크 관리가 우선입니다.</div>
 </footer>
-</div>
-<section aria-label="관련 링크" class="rel-links">
-<h2>관련 링크</h2>
-<div class="rel-grid">
-<a data-cta="rel_home" href="/">메인</a>
-<a data-cta="rel_odds" href="/#oddsAnalyzerSection">배당 구조 분석기</a>
-<a data-cta="rel_margin" href="/tool-margin/">마진 계산기</a>
-<a data-cta="rel_ev" href="/tool-ev/">EV 계산기</a>
-<a data-cta="rel_odds2" href="/tool-odds/">배당↔확률 변환</a>
-<a data-cta="rel_vendors" href="/cert/">보증·인증 업체</a>
-<a data-cta="rel_bonus" href="/bonus-checklist/">입플 체크리스트</a>
-<a data-cta="rel_landing_a" href="/landing-a/">입플·보너스 안내</a>
-</div>
-</section>
-<style>
+</div><style>
   .rel-links{max-width:1080px;margin:26px auto 34px;padding:14px 14px 16px;border-radius:18px;
     border:1px solid rgba(255,255,255,.10);background:linear-gradient(180deg,rgba(255,255,255,.05),rgba(255,255,255,.02));
     box-shadow:0 14px 40px rgba(0,0,0,.35);}
