--- a/bonus-checklist/index.html
+++ b/bonus-checklist/index.html
@@ -529,21 +529,7 @@
       {"@type":"Question","name":"배당/확률/EV 계산기는 여기랑 무슨 관계가 있나요?","acceptedAnswer":{"@type":"Answer","text":"보너스 조건을 확인해도 실제 의사결정은 숫자(확률/기대값/마진)로 검증하는 게 안정적입니다. 도구를 함께 쓰면 판단이 빨라집니다."}}
     ]
   }
-  </script>
-<section aria-label="관련 링크" class="rel-links">
-<h2>관련 링크</h2>
-<div class="rel-grid">
-<a data-cta="rel_home" href="/">메인</a>
-<a data-cta="rel_odds" href="/#oddsAnalyzerSection">배당 구조 분석기</a>
-<a data-cta="rel_margin" href="/tool-margin/">마진 계산기</a>
-<a data-cta="rel_ev" href="/tool-ev/">EV 계산기</a>
-<a data-cta="rel_odds2" href="/tool-odds/">배당↔확률 변환</a>
-<a data-cta="rel_vendors" href="/cert/">보증·인증 업체</a>
-<a data-cta="rel_bonus" href="/bonus-checklist/">입플 체크리스트</a>
-<a data-cta="rel_landing_a" href="/landing-a/">입플·보너스 안내</a>
-</div>
-</section>
-<style>
+  </script><style>
   .rel-links{max-width:1080px;margin:26px auto 34px;padding:14px 14px 16px;border-radius:18px;
     border:1px solid rgba(255,255,255,.10);background:linear-gradient(180deg,rgba(255,255,255,.05),rgba(255,255,255,.02));
     box-shadow:0 14px 40px rgba(0,0,0,.35);}
