--- a/index.html
+++ b/index.html
@@ -1774,13 +1774,13 @@ const INSIGHTS_BY_SPORT = {
   ]
 }
 </script>
-<link href="assets/mobile-polish.css?v=VIP4_20260214_15" rel="stylesheet"/>
-<script src="/assets/js/88st-analytics.js?v=VIP4_20260214_15"></script>
-<link href="/assets/88st-theme.css?v=VIP4_20260214_15" rel="stylesheet"/>
-<link href="/assets/88st-tool-history.css?v=VIP4_20260214_15" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-history-hub.js?v=VIP4_20260214_15"></script>
-</meta><link href="/assets/88st-shell.css?v=VIP4_20260214_15" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260214_15"></script>
+<link href="assets/mobile-polish.css?v=VIP4_20260214_17" rel="stylesheet"/>
+<script src="/assets/js/88st-analytics.js?v=VIP4_20260214_17"></script>
+<link href="/assets/88st-theme.css?v=VIP4_20260214_17" rel="stylesheet"/>
+<link href="/assets/88st-tool-history.css?v=VIP4_20260214_17" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-history-hub.js?v=VIP4_20260214_17"></script>
+</meta><link href="/assets/88st-shell.css?v=VIP4_20260214_17" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260214_17"></script>
 </head>
 <body>
 <h1 style="position:absolute;left:-9999px;">스포츠 배당 분석기와 배당 마진 계산기 | 88</h1>
@@ -1795,7 +1795,7 @@ const INSIGHTS_BY_SPORT = {
 <div class="section" id="analyzerSection">
 <div class="title"><span class="badge">MAIN</span>분석기 바로가기</div>
 <div class="cta-row">
-<a class="analyze-btn primary" data-cta="go_sports_analysis" href="/analysis/">
+<a class="analyze-btn primary" data-cta="open_tool_sports" href="/analysis/">
 <span aria-hidden="true" class="icon">
 <svg fill="none" height="22" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="22">
 <path d="M3 3v18h18"></path>
@@ -1805,7 +1805,7 @@ const INSIGHTS_BY_SPORT = {
 <span class="label">스포츠 분석기 이동<span class="sub"> 중·고급·핸디·언더·오버·EV</span></span>
 </a>
 
-<a class="analyze-btn secondary" data-cta="go_minigame_analyzer" href="/tool-minigame/">
+<a class="analyze-btn secondary" data-cta="open_tool_minigame" href="/tool-minigame/">
   <span aria-hidden="true" class="icon">
     <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
       <path d="M12 3v18"/>
@@ -1817,7 +1817,7 @@ const INSIGHTS_BY_SPORT = {
   <span class="label">미니게임 분석기 이동<span class="sub">동행 파워볼·파워볼+·키노사다리</span></span>
 </a>
 
-<a class="analyze-btn secondary" data-cta="go_casino_strategy" href="/tool-casino/">
+<a class="analyze-btn secondary" data-cta="open_tool_casino" href="/tool-casino/">
   <span aria-hidden="true" class="icon">
     <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
       <path d="M4 8a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V8z"/>
@@ -1829,7 +1829,7 @@ const INSIGHTS_BY_SPORT = {
   <span class="label">카지노 전략 분석기 이동<span class="sub">마틴·파롤리·달랑·오스카·피보·라부</span></span>
 </a>
 
-<a class="analyze-btn secondary" data-cta="go_slot_analyzer" href="/tool-slot/">
+<a class="analyze-btn secondary" data-cta="open_tool_slot" href="/tool-slot/">
   <span aria-hidden="true" class="icon">
     <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
       <rect x="5" y="3" width="14" height="18" rx="2"/>
@@ -1844,7 +1844,7 @@ const INSIGHTS_BY_SPORT = {
   <span class="label">슬롯 환수율(RTP) 분석기<span class="sub">RTP·변동성·세션 비용·뱅크롤</span></span>
 </a>
 
-<a class="analyze-btn secondary" data-cta="go_cert" href="/cert/">
+<a class="analyze-btn secondary" data-cta="open_cert" href="/cert/">
 <span aria-hidden="true" class="icon">
 <svg fill="none" height="22" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="22">
 <path d="M12 2l3 7 7 3-7 3-3 7-3-7-7-3 7-3 3-7z"></path>
@@ -1876,7 +1876,7 @@ const INSIGHTS_BY_SPORT = {
     </div>
 
     <div class="why-note">같은 시장/종류라면 <b>마진이 낮을수록</b> 비용(수수료)이 낮은 편입니다. (참고용)</div>
-    <div class="why-cta"><a class="insight-btn primary" data-cta="why_to_analysis" href="/analysis/">스포츠 분석기 열기 <span aria-hidden="true">→</span></a></div>
+    <div class="why-cta"><a class="insight-btn primary" data-cta="open_tool_sports" href="/analysis/">스포츠 분석기 열기 <span aria-hidden="true">→</span></a></div>
   </div>
 
 <div class="why-card" aria-label="미니게임 분석기">
@@ -1895,7 +1895,7 @@ const INSIGHTS_BY_SPORT = {
     </div>
 
     <div class="why-note">결과를 “보기 좋게 정리”하는 도구입니다. 과몰입을 피하고, 기록은 짧게 가져가세요.</div>
-    <div class="why-cta"><a class="insight-btn primary" data-cta="why_to_minigame" href="/tool-minigame/">미니게임 분석기 열기 <span aria-hidden="true">→</span></a></div>
+    <div class="why-cta"><a class="insight-btn primary" data-cta="open_tool_minigame" href="/tool-minigame/">미니게임 분석기 열기 <span aria-hidden="true">→</span></a></div>
   </div>
 
 <div class="why-card" aria-label="카지노 전략 분석기">
@@ -1915,7 +1915,7 @@ const INSIGHTS_BY_SPORT = {
     </div>
 
     <div class="why-note">단순 ‘계산기’가 아니라, <b>실전 세션 운영</b>에 필요한 숫자를 한 번에 보여줍니다.</div>
-    <div class="why-cta"><a class="insight-btn primary" data-cta="why_to_casino" href="/tool-casino/">카지노 전략 분석기 열기 <span aria-hidden="true">→</span></a></div>
+    <div class="why-cta"><a class="insight-btn primary" data-cta="open_tool_casino" href="/tool-casino/">카지노 전략 분석기 열기 <span aria-hidden="true">→</span></a></div>
   </div>
 
 <div class="why-card" aria-label="슬롯 환수율(RTP) 분석기">
@@ -1935,7 +1935,7 @@ const INSIGHTS_BY_SPORT = {
     </div>
 
     <div class="why-note">이 도구는 ‘예측’이 아니라 <b>세션/자금관리</b>를 위한 참고용 분석기입니다.</div>
-    <div class="why-cta"><a class="insight-btn primary" data-cta="why_to_slot" href="/tool-slot/">슬롯 환수율(RTP) 분석기 열기 <span aria-hidden="true">→</span></a></div>
+    <div class="why-cta"><a class="insight-btn primary" data-cta="open_tool_slot" href="/tool-slot/">슬롯 환수율(RTP) 분석기 열기 <span aria-hidden="true">→</span></a></div>
   </div>
 
 
