--- a/cert/index.html
+++ b/cert/index.html
@@ -14,11 +14,11 @@
   <link rel="icon" type="image/png" href="/img/favicon.png"/>
   <link rel="canonical" href="https://88st.cloud/cert/"/>
 
-  <link rel="stylesheet" href="/assets/88st-cert.css?v=VIP4_20260214_15"/>
+  <link rel="stylesheet" href="/assets/88st-cert.css?v=VIP4_20260214_17"/>
 
   <!-- common shell + analytics -->
-  <script defer src="/assets/js/88st-shell.js?v=VIP4_20260214_15"></script>
-  <script defer src="/assets/js/88st-analytics.js?v=VIP4_20260214_15"></script>
+  <script defer src="/assets/js/88st-shell.js?v=VIP4_20260214_17"></script>
+  <script defer src="/assets/js/88st-analytics.js?v=VIP4_20260214_17"></script>
 </head>
 <body>
   <main class="cert-wrap">
@@ -141,14 +141,14 @@
 
       <div class="popup-actions">
         <button class="btn" id="copyBtn">코드 복사</button>
-        <a class="btn primary" id="pLink" href="#" target="_blank" rel="noopener">사이트 이동</a>
-        <a class="btn" id="pTelegram" href="https://t.me/UZU59" target="_blank" rel="noopener">문의 (텔레그램)</a>
+        <a class="btn primary" id="pLink" data-no-auto-outbound="1" data-outbound-manual="1" href="#" target="_blank" rel="noopener">사이트 이동</a>
+        <a class="btn" id="pTelegram" data-no-auto-outbound="1" data-outbound-manual="1" href="https://t.me/UZU59" target="_blank" rel="noopener">문의 (텔레그램)</a>
         <button class="btn" id="favBtn">☆ 즐겨찾기</button>
       </div>
     </div>
   </div>
 
-  <script defer src="/assets/js/88st-cert.js?v=VIP4_20260214_15"></script>
+  <script defer src="/assets/js/88st-cert.js?v=VIP4_20260214_17"></script>
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
