--- a/tool-casino/index.html
+++ b/tool-casino/index.html
@@ -17,17 +17,17 @@
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
 
-  <link rel="stylesheet" href="/assets/88st-theme.css?v=VIP4_20260214_15"/>
-  <link rel="stylesheet" href="/assets/88st-casino-strategies.css?v=VIP4_20260214_15"/>
-  <link rel="stylesheet" href="/assets/88st-shell.css?v=VIP4_20260214_15"/>
-  <script defer src="/assets/js/88st-shell.js?v=VIP4_20260214_15"></script>
-  <script defer src="/assets/js/88st-casino-strategies.js?v=VIP4_20260214_15"></script>
+  <link rel="stylesheet" href="/assets/88st-theme.css?v=VIP4_20260214_17"/>
+  <link rel="stylesheet" href="/assets/88st-casino-strategies.css?v=VIP4_20260214_17"/>
+  <link rel="stylesheet" href="/assets/88st-shell.css?v=VIP4_20260214_17"/>
+  <script defer src="/assets/js/88st-shell.js?v=VIP4_20260214_17"></script>
+  <script defer src="/assets/js/88st-casino-strategies.js?v=VIP4_20260214_17"></script>
   <!-- GA4 (Casino Stream) -->
   <script>
     window.SITE_CONFIG = window.SITE_CONFIG || {};
-    window.SITE_CONFIG.GA4_ID = 'G-22QKSP9VGB';
+    window.SITE_CONFIG.GA4_ID = 'G-KWT87FBY6S';
   </script>
-  <script defer src='/assets/js/88st-analytics.js?v=VIP4_20260214_15'></script>
+  <script defer src='/assets/js/88st-analytics.js?v=VIP4_20260214_17'></script>
 
 
   <script type="application/ld+json">
