--- a/tool-minigame/index.html
+++ b/tool-minigame/index.html
@@ -19,18 +19,18 @@
   <link rel='icon' href='/favicon.ico' type='image/x-icon'/>
   <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon'/>
 
-  <link rel='stylesheet' href='/assets/88st-theme.css?v=VIP4_20260214_15'/>
-  <link rel='stylesheet' href='/assets/88st-minigame-analyzer.css?v=VIP4_20260214_15'/>
-  <link rel='stylesheet' href='/assets/88st-shell.css?v=VIP4_20260214_15'/>
-  <script defer src='/assets/js/88st-shell.js?v=VIP4_20260214_15'></script>
-  <script defer src='/assets/js/88st-minigame-analyzer.js?v=VIP4_20260214_15'></script>
+  <link rel='stylesheet' href='/assets/88st-theme.css?v=VIP4_20260214_17'/>
+  <link rel='stylesheet' href='/assets/88st-minigame-analyzer.css?v=VIP4_20260214_17'/>
+  <link rel='stylesheet' href='/assets/88st-shell.css?v=VIP4_20260214_17'/>
+  <script defer src='/assets/js/88st-shell.js?v=VIP4_20260214_17'></script>
+  <script defer src='/assets/js/88st-minigame-analyzer.js?v=VIP4_20260214_17'></script>
 
   <!-- GA4 (main stream) -->
   <script>
     window.SITE_CONFIG = window.SITE_CONFIG || {};
-    window.SITE_CONFIG.GA4_ID = 'G-22QKSP9VGB';
+    window.SITE_CONFIG.GA4_ID = 'G-KWT87FBY6S';
   </script>
-  <script defer src='/assets/js/88st-analytics.js?v=VIP4_20260214_15'></script>
+  <script defer src='/assets/js/88st-analytics.js?v=VIP4_20260214_17'></script>
 
   <script type='application/ld+json'>
   {
@@ -282,7 +282,7 @@
         var host = document.getElementById('mgGameTabs');
         if((!window.__MG_INIT_DONE) && host && host.children && host.children.length === 0){
           var s = document.createElement('script');
-          s.src = '/assets/js/88st-minigame-analyzer.js?v=VIP4_20260214_15';
+          s.src = '/assets/js/88st-minigame-analyzer.js?v=VIP4_20260214_17';
           s.defer = true;
           document.body.appendChild(s);
         }
