--- a/landing-a/index.html
+++ b/landing-a/index.html
@@ -289,9 +289,9 @@ a{ color:inherit; }
 <div class="t">88st.cloud</div>
 </div>
 <div class="nav">
-<a data-utm="1" href="/" onclick="track('landing_nav_home',{landing:'a'})">메인</a>
-<a data-utm="1" href="/analysis/" onclick="track('landing_nav_analyzer',{landing:'a'})">분석기</a>
-<a data-utm="1" href="/cert/" onclick="track('landing_nav_vendor',{landing:'a'})">인증놀이터</a>
+<a data-utm="1" href="/" data-ev-click="xg5BLrE4oIUs">메인</a>
+<a data-utm="1" href="/analysis/" data-ev-click="xYdD6Y50EvaY">분석기</a>
+<a data-utm="1" href="/cert/" data-ev-click="xnsmIcsCPPE4">인증놀이터</a>
 </div>
 </div>
 <div class="hero">
@@ -301,10 +301,10 @@ a{ color:inherit; }
 <div class="pill">입플/보너스</div><div class="pill">페이백</div><div class="pill">고액 유저 기준</div><div class="pill">무료/초간단</div><div class="pill">조건 확인</div>
 </div>
 <div class="ctaRow">
-<a class="btn primary" data-utm="1" href="/analysis/" onclick="track('landing_cta_click',{landing:'a',cta:'analyzer'})">
+<a class="btn primary" data-utm="1" href="/analysis/" data-ev-click="xCuKYfeaHMtw">
            무료 분석기 사용하기
         </a>
-<a class="btn secondary" data-utm="1" href="/cert/" onclick="track('landing_cta_click',{landing:'a',cta:'vendor'})">
+<a class="btn secondary" data-utm="1" href="/cert/" data-ev-click="x9mOa3NN6c28">
            88 인증놀이터 바로보기
         </a>
 </div>
@@ -341,10 +341,10 @@ a{ color:inherit; }
 <div class="footer">
 <div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
 <div class="smallLinks">
-<a data-utm="1" href="/landing-a/" onclick="track('landing_cross',{from:'a',to:'a'})">입플·보너스</a>
-<a data-utm="1" href="/landing-b/" onclick="track('landing_cross',{from:'a',to:'b'})">고액/보증업체</a>
-<a data-utm="1" href="/landing-c/" onclick="track('landing_cross',{from:'a',to:'c'})">마진·EV</a>
-<a data-utm="1" href="/landing-d/" onclick="track('landing_cross',{from:'a',to:'d'})">배당 흐름</a>
+<a data-utm="1" href="/landing-a/" data-ev-click="xV28UMrE1TGs">입플·보너스</a>
+<a data-utm="1" href="/landing-b/" data-ev-click="xbw8sJKRDNK4">고액/보증업체</a>
+<a data-utm="1" href="/landing-c/" data-ev-click="x4CL_8KzW_Ow">마진·EV</a>
+<a data-utm="1" href="/landing-d/" data-ev-click="x20-nj9b0KWA">배당 흐름</a>
 </div>
 </div>
 </div><style>
@@ -357,5 +357,6 @@ a{ color:inherit; }
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
+<script src="/assets/js/ie.4ecfc30ca8.js" defer></script>
 </body>
 </html>
