--- a/landing-d/index.html
+++ b/landing-d/index.html
@@ -289,9 +289,9 @@ a{ color:inherit; }
 <div class="t">88st.cloud</div>
 </div>
 <div class="nav">
-<a data-utm="1" href="/" onclick="track('landing_nav_home',{landing:'d'})">메인</a>
-<a data-utm="1" href="/analysis/" onclick="track('landing_nav_analyzer',{landing:'d'})">분석기</a>
-<a data-utm="1" href="/cert/" onclick="track('landing_nav_vendor',{landing:'d'})">인증놀이터</a>
+<a data-utm="1" href="/" data-ev-click="xvAPcOs_XAtc">메인</a>
+<a data-utm="1" href="/analysis/" data-ev-click="xNdMkuU-LYXk">분석기</a>
+<a data-utm="1" href="/cert/" data-ev-click="x9agrTnJVM8g">인증놀이터</a>
 </div>
 </div>
 <div class="hero">
@@ -301,10 +301,10 @@ a{ color:inherit; }
 <div class="pill">라인 변동</div><div class="pill">급변 구간</div><div class="pill">시장 과열</div><div class="pill">마진 변화</div><div class="pill">분석기 연동</div>
 </div>
 <div class="ctaRow">
-<a class="btn primary" data-utm="1" href="/analysis/" onclick="track('landing_cta_click',{landing:'d',cta:'analyzer'})">
+<a class="btn primary" data-utm="1" href="/analysis/" data-ev-click="xlwZ8kKfE8mY">
            무료 분석기 사용하기
         </a>
-<a class="btn secondary" data-utm="1" href="/cert/" onclick="track('landing_cta_click',{landing:'d',cta:'vendor'})">
+<a class="btn secondary" data-utm="1" href="/cert/" data-ev-click="xxvGpRJ1N18o">
            88 인증놀이터 바로보기
         </a>
 </div>
@@ -341,10 +341,10 @@ a{ color:inherit; }
 <div class="footer">
 <div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
 <div class="smallLinks">
-<a data-utm="1" href="/landing-a/" onclick="track('landing_cross',{from:'d',to:'a'})">입플·보너스</a>
-<a data-utm="1" href="/landing-b/" onclick="track('landing_cross',{from:'d',to:'b'})">고액/보증업체</a>
-<a data-utm="1" href="/landing-c/" onclick="track('landing_cross',{from:'d',to:'c'})">마진·EV</a>
-<a data-utm="1" href="/landing-d/" onclick="track('landing_cross',{from:'d',to:'d'})">배당 흐름</a>
+<a data-utm="1" href="/landing-a/" data-ev-click="xTSifWonMBzk">입플·보너스</a>
+<a data-utm="1" href="/landing-b/" data-ev-click="xKmMjt8h8lq0">고액/보증업체</a>
+<a data-utm="1" href="/landing-c/" data-ev-click="x5uuzDfrGXKc">마진·EV</a>
+<a data-utm="1" href="/landing-d/" data-ev-click="xKXBfTeDZU54">배당 흐름</a>
 </div>
 </div>
 </div><style>
@@ -357,5 +357,6 @@ a{ color:inherit; }
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
+<script src="/assets/js/ie.4ecfc30ca8.js" defer></script>
 </body>
 </html>
