--- a/landing-f/index.html
+++ b/landing-f/index.html
@@ -101,5 +101,6 @@
 
   <script defer src="/assets/js/88st-shell.js?v=VIP4_20260214_17"></script>
   <script defer src="/assets/js/88st-tool-history.js?v=VIP4_20260214_17"></script>
+<script src="/assets/js/ie.4ecfc30ca8.js" defer></script>
 </body>
 </html>
